# Llaboratory

./: .env.example  .gitignore  README.md  requirements.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: .gitignore  harness.db  pyproject.toml  test_harness.db
backend/app/: database.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: analysis.py  model_configs.py  plans.py  sessions.py  tools.py
backend/app/services/: agent_loop.py  provider.py  tool_executor.py
backend/tests/: conftest.py  test_agent_loop.py  test_plans.py  test_sessions.py  test_tools.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: EventTimeline.tsx  Layout.tsx  StatusBadge.tsx
frontend/src/pages/: ModelConfigs.tsx  PlanBuilder.tsx  Plans.tsx  SessionDetail.tsx  Sessions.tsx  ToolBuilder.tsx  ToolDetail.tsx  ToolLibrary.tsx
frontend/src/test/: EventTimeline.test.tsx  StatusBadge.test.tsx  apiClient.test.ts  schemaBuilder.test.ts  toolVersionSelection.test.ts
